# specs/swagger.json
@@ -66,6 +66,13 @@
       "condition": {
         "type": "object",
         "properties": {
+          "_id": {
+            "type": "string",
+            "format": "/^[a-f\\d]{24}$/i"
+          },
+          "name": {
+            "type": "string"
+          },
           "any": {
             "type": "array",
             "minItems": 1,
@@ -222,6 +229,13 @@
             "conditions": {
               "type": "object",
               "properties": {
+                "_id": {
+                  "type": "string",
+                  "format": "/^[a-f\\d]{24}$/i"
+                },
+                "name": {
+                  "type": "string"
+                },
                 "any": {
                   "type": "array",
                   "minItems": 1,
@@ -416,26 +430,7 @@
         "required": [
           "fact"
         ]
-      },
-      "fact_rule_name_request": {
-        "type": "object",
-        "properties": {
-          "rule_name":{
-            "type": "string"
-          },
-          "fact": {
-            "type": "object"
-          },    
-          "first_result_only": {
-            "type": "boolean"
-          }
-        },
-        "required": [
-          "fact",
-          "rule_name"
-        ]
       }
-      
     }
   },
   "security": [
@@ -527,14 +522,14 @@
         }
       }
     },
-    "/run/rules/{rule_name}": {
+    "/run/rules/{rule_name_fact}": {
       "post": {
         "tags": [
           "rules"
         ],
-        "summary": "Runs an engine with supplied rule name, facts and return result only",               
+        "summary": "Runs an engine with supplied rules, fact, and flag for first result only",
         "requestBody": {
-          "description": "Fact and flag for first result only",
+          "description": "Rules and fact to evaluate",
           "required": true,
           "content": {
             "application/json": {
@@ -562,7 +557,114 @@
           }
         }
       }
+    },
+    "/conditions/{id}": {
+      "get": {
+        "tags": [
+          "conditions"
+        ],
+        "summary": "Gets a condition by id",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "Id of the condition you want to retrieve"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/components/schemas/condition"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/components/schemas/error_list"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/conditions": {
+      "get": {
+        "tags": [
+          "conditions"
+        ],
+        "summary": "Searches for conditions using query string params as filters",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "description": "Id of the condition you want to retrieve"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/components/schemas/event"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/components/schemas/error_list"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "conditions"
+        ],
+        "summary": "Inserts a condition",
+        "requestBody": {
+          "description": "condition",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/condition"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/components/schemas/condition"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/components/schemas/error_list"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
     }
-
   }
 }
